clean up meta, make bg, fix errors

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<title>Generic Uncopyrighted Ball Tapping Game</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="utf-8">
 <meta content="utf-8" http-equiv="encoding">
 </head>
 <body>
@@ -21,7 +23,7 @@ window.onload = function() {
     cool_gradient.addColorStop(1, "white");
     ctx.fillStyle = cool_gradient;
     ctx.fillRect(20, 20, 150, 100);
-    canvas.Context.fillRect(0, 0, canvas.width, canvas.height);
+    canvas.ctx.fillRect(0, 0, canvas.width, canvas.height);
 }
 
 
