--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <script>
 // variables for ball position
 var ballX = 93, ballY = 93;
+var ballSpeedX = 6, ballSpeedY = 6;
 // save canvas for dimensions, and 2d context for drawing to it
 var canvas, ctx;
 
@@ -28,7 +29,18 @@ window.onload = function() {
 }
 
 function moveEverything() {
-    ballX += 2;
+    if (ballX > canvas.width) {
+        ballSpeedX *= -1;
+    } else if (ballX <=1) {
+        ballSpeedX *= -1;
+    }
+    ballX += ballSpeedX;
+    if (ballY > canvas.height) {
+        ballSpeedY *= -1;
+    } else if (ballY <=1) {
+        ballSpeedY *= -1;
+    }
+    ballY += ballSpeedY
 }
 
 function drawEverything() {
@@ -41,6 +53,11 @@ function drawEverything() {
     ctx.beginPath();
     ctx.arc(ballX, ballY, 10, 0, Math.PI*2, true);
     ctx.fill();
+    
+    // draw a white rectangle 250 down, 10 px w, 100 px h
+    ctx.fillStyle = "white";
+    ctx.fillRect(0, 250, 10, 100);
+    
 }
 </script>
 </body>
