--- a/index.html
+++ b/index.html
@@ -8,25 +8,37 @@
 </head>
 <body>
 <canvas id="gameCanvas" width="800" height="600"></canvas>
+
 <script>
+// This project made using Chris DeLeon's Hands-on Intro to Game Programming v5
+const PADDLE_HEIGHT = 100;
+const PADDLE_THICKNESS = 10;
+const WINNING_SCORE = 11;
+
 // variables for ball position
 var ballX = 93, ballY = 93;
-var ballSpeedX = 6, ballSpeedY = 6;
+var ballSpeedX = -1, ballSpeedY = 0;
+
+// variables for paddle state
+var paddle1Y = 250, paddle2Y = 250;
+var paddle1Score = 0, paddle2Score = 0;
+
 // save canvas for dimensions, and 2d context for drawing to it
 var canvas, ctx;
-const PADDLE_HEIGHT = 100;
-var paddle1Y = 100
 
 window.onload = function() {
     canvas = document.getElementById('gameCanvas');
     ctx = canvas.getContext('2d');
+
+    // mouse handlers
     canvas.addEventListener('mousemove', function(evt) {
         var mousePos = calculateMousPos(evt);
         paddle1Y = mousePos.y - (PADDLE_HEIGHT/2); // minus half height, to center it
     });
+    // canvas.addEventListener('mousedown', handleMouseClick);
+
     // refresh the screen every framesPerSecond
     var framesPerSecond = 30;
-    // use an anonymous function to run 2 functions
     setInterval(function() {
         moveEverything();
         drawEverything();
@@ -34,20 +46,34 @@ window.onload = function() {
 }
 
 function moveEverything() {
-    if (ballX > canvas.width) {
-        ballSpeedX *= -1;
-    } else if (ballX <=1) {
-        ballSpeedX *= -1;
-    }
-    ballX += ballSpeedX;
+    // bounce the ball when it hits a wall vertically
     if (ballY > canvas.height) {
         ballSpeedY *= -1;
     } else if (ballY <=1) {
         ballSpeedY *= -1;
     }
-    ballY += ballSpeedY
+    // paddle1 collision detection
+    if(ballX < PADDLE_THICKNESS) { // if ball has moved beyond the left edge
+      if(ballY > paddle1Y && ballY < paddle1Y+PADDLE_HEIGHT) {
+        ballSpeedX *= -1; // reverse ball's horizontal direction
+
+        var deltaY = ballY-(paddle1Y+PADDLE_HEIGHT/2);
+        ballSpeedY = deltaY * 0.35;
+      } else {
+        paddle2Score++;
+        ballReset();
+      }
+    }
+    ballX += ballSpeedX;
+    ballY += ballSpeedY;
 }
 
+
+// function to reset ball position
+function ballReset() {
+    ballX = canvas.width / 2;
+    ballY = canvas.height / 2;
+}
 // function to draw solid colored rectangles
 function colorRect(topLeftX, topLeftY, boxWidth, boxHeight, fillColor) {
     ctx.fillStyle = fillColor;
@@ -66,8 +92,11 @@ function drawEverything() {
     // draw the background
     colorRect(0, 0, canvas.width, canvas.height, "blue");
 
-    // draw left paddle: a white rectangle w y position set by the mouse, 10 px w, 100 px h
-    colorRect(0, paddle1Y, 10, 100, "white");
+    // draw left (player) paddle: a white rectangle w y position set by the mouse, 10 px w, 100 px h
+    colorRect(0, paddle1Y, PADDLE_THICKNESS, PADDLE_HEIGHT, "white");
+
+    // draw right (ai) paddle
+    colorRect(canvas.width - 10, paddle2Y, PADDLE_THICKNESS, PADDLE_HEIGHT, "white");
    
     // draw the ball: a white circle
     colorCircle(ballX, ballY, 10, 'white');
